--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 [ ] Do a big pass on terminology: name vs key vs field.
 [ ] Rename json and jsonField etc. in the parser, should be object, objectField etc. JSON is only the string.
+[ ] The null and type check can be generalized, all use properties of the ConfigElement class, and not on the specific instance.
