Implement all Test and Parsing Logic
Implement the remainder of all the tests for all other elements, and
implemented the logic for arrays. Include a refactor on how the builder
is building the elements, and use an instance of the correct type of
element as soon as possible, even forcing the user to first call a
`ofTypeAbc()` method.

Next commits should add test coverage for the elements themselves and
the element builder.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 [ ] Do a big pass on terminology: name vs key vs field.
 [ ] Rename json and jsonField etc. in the parser, should be object, objectField etc. JSON is only the string.
 [ ] The null and type check can be generalized, all use properties of the ConfigElement class, and not on the specific instance.
+[ ] Refactor the check if correct ofTypeAbc() is called: Have a method called throwIfNotType(ElementType, methodName)
